--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,61 @@
 .hidden {
     display: none;
 }
+
+@font-face {
+    font-family: 'KOTRAHOPE';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: 'KOTRAHOPE';
+    height: 100vh;
+    margin: 0;
+}
+
+img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -5;
+    height: 100vh;
+    width: 100vw;
+    image-resolution: 300dpi;
+}
+
+#clock{
+  font-weight: bold;
+  color: whitesmoke;
+  font-size: 100px;
+  margin: 0;
+}
+
+#login{
+    border: none;
+    border-radius: 45px 0 0 45px;
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    color: rgba(90, 90, 90, 0.8);
+    height: 50px;
+    width: 300px;
+    padding: 0;
+}
+
+#login-button {
+    border: none;
+    border-radius: 0 45px 45px 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgba(90, 90, 90, 0.8);
+    height: 50px;
+    width: 100px;
+    padding: 0;
+    cursor: pointer;
+}
