--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,34 @@ img {
     padding: 0;
     cursor: pointer;
 }
+
+#todo {
+    position: relative;
+    height: 100px;
+    animation-name: displaceContent3;
+    animation-duration: 1s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+#todo-input {
+    position: relative;
+    text-align: center;
+    border-radius: 25px;
+    width: 80vw;
+    max-width: 500px;
+    height: 45px;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+#todo-button {
+    position: relative;
+    cursor: pointer;
+    border-radius: 25px;
+    height: 45px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgba(90, 90, 90, 0.8);
+}
