--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body {
     margin: 0;
 }
 
+#main-form {
+    margin-top: -300px;
+}
+
 img {
     position: absolute;
     left: 0;
@@ -34,30 +38,44 @@ img {
 #clock{
   font-weight: bold;
   color: whitesmoke;
-  font-size: 100px;
+  font-size: 150px;
   margin: 0;
+}
+
+#date{
+    font-weight: bold;
+    color: whitesmoke;
+    font-size: 50px;
+    margin: 0;
 }
 
 #login{
     border: none;
-    border-radius: 45px 0 0 45px;
+    border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
     color: rgba(90, 90, 90, 0.8);
     height: 50px;
     width: 300px;
+    margin-top: 50px;
     padding: 0;
+    font-size: 20px;
+    font-family: 'KOTRAHOPE';
 }
 
 #login-button {
     border: none;
-    border-radius: 0 45px 45px 0;
+    border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.8);
     color: rgba(90, 90, 90, 0.8);
     height: 50px;
-    width: 100px;
+    width: 60px;
+    margin-top: 50px;
+    margin-left: 5px;
     padding: 0;
     cursor: pointer;
+    font-size: 15px;
+    font-family: 'KOTRAHOPE';
 }
 
 #todo {
@@ -68,6 +86,8 @@ img {
     animation-delay: 0;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    font-size: 20px;
+    font-family: 'KOTRAHOPE';
 }
 
 #todo-input {
@@ -79,6 +99,8 @@ img {
     height: 45px;
     border: 0;
     background-color: rgba(255, 255, 255, 0.5);
+    font-size: 20px;
+    font-family: 'KOTRAHOPE';
 }
 
 #todo-button {
@@ -89,4 +111,69 @@ img {
     border: none;
     background-color: rgba(255, 255, 255, 0.8);
     color: rgba(90, 90, 90, 0.8);
+    font-size: 15px;
+    font-family: 'KOTRAHOPE';
+}
+
+#todo-list-container {
+    height: 30vh;
+    overflow: auto;
+ }
+  
+ #todo {
+    position: relative;
+    height: 100px;
+    animation-name: displaceContent3;
+    animation-duration: 1s;
+    animation-delay: 0;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+#todo-list {
+    overflow: auto;
+}
+  
+#todo-list li {
+    position: relative;
+    list-style: none;
+    margin: 10px;
+    font-size: 25px;
+    font-family: 'KOTRAHOPE';
+    color: whitesmoke;
+}
+
+#delete-button {
+    margin-left: 20px;
+    border: none;
+    font-weight: bold;
+    color: rgb(243, 61, 61);
+    background-color:transparent;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#delete-button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+  
+
+footer {
+    position: absolute;
+    text-align: center;
+    display: block;
+    left: 0;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    margin-bottom: 50px;
+    font-size: 30px;
+    color: whitesmoke;
+}
+
+#greeting {
+  display: inline;
+  color: whitesmoke;
+  font-size: 100px;
+  font-family: 'KOTRAHOPE';
 }
