--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,21 @@ img {
     font-family: 'KOTRAHOPE';
 }
 
+#logout-button {
+    border: none;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgba(90, 90, 90, 0.8);
+    height: 20px;
+    width: 60px;
+    margin-top: 50px;
+    margin-left: 5px;
+    padding: 0;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: 'KOTRAHOPE';
+}
+
 #todo {
     position: relative;
     height: 100px;
@@ -118,9 +133,9 @@ img {
 #todo-list-container {
     height: 30vh;
     overflow: auto;
- }
+}
   
- #todo {
+#todo {
     position: relative;
     height: 100px;
     animation-name: displaceContent3;
