--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ img {
     border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
-    color: rgba(90, 90, 90, 0.8);
+    color: black;
     height: 50px;
     width: 300px;
     margin-top: 50px;
@@ -67,7 +67,7 @@ img {
     border: none;
     border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.8);
-    color: rgba(90, 90, 90, 0.8);
+    color: black;
     height: 50px;
     width: 60px;
     margin-top: 50px;
@@ -82,7 +82,7 @@ img {
     border: none;
     border-radius: 25px;
     background-color: rgba(255, 255, 255, 0.8);
-    color: rgba(90, 90, 90, 0.8);
+    color: black;
     height: 20px;
     width: 60px;
     margin-top: 50px;
